# routes/products.ts
@@ -2,23 +2,21 @@ import { NextFunction, Request, Response, Router } from 'express';
 import categories from '../controllers/products/categories';
 import upload from '../middlewares/upload';
 import createProducts from '../controllers/products/createProducts';
+import validateBody from '../middlewares/validateBody';
+import { schemaProductCreate } from '../schemas/joi/joiValidator';
 
 const router = Router();
 
 router.get('/categories', categories);
+
 router.post(
   '/create',
   upload.fields([
     { name: 'imgThumbnail', maxCount: 1 },
-    { name: 'imgGallery', maxCount: 5 },
+    { name: 'imgGallery', maxCount: 4 },
   ]),
+  validateBody(schemaProductCreate),
   createProducts,
-  // eslint-disable-next-line @typescript-eslint/no-unused-vars
-  (error: Error, req: Request, res: Response, next: NextFunction) => {
-    // This will catch any errors from the Multer middleware
-    console.error(error);
-    res.status(500).send({ error: error.message });
-  },
 );
 
 export default router;
