# schemas/joi/joiValidator.ts
@@ -21,3 +21,16 @@ export const schemaSubscribe = Joi.object({
     .email({ minDomainSegments: 2, tlds: { deny: ['ru'] } })
     .required(),
 });
+
+export const schemaProductCreate = Joi.object({
+  name: Joi.string().required(),
+  price: Joi.number().required(),
+  sale: Joi.number(),
+  description: Joi.string().required(),
+  features: Joi.array().items(Joi.string()).required(),
+  sex: Joi.string().required(),
+  season: Joi.string().required(),
+  size: Joi.number().required(),
+  brand: Joi.string().required(),
+  color: Joi.string().required(),
+});
